# acmiyaguchi.me

./: .gitignore  .gitmodules  README.md  deploy.sh  index.html  life.html  mandelbrot.js
.github/: dependabot.yml
apps/chip8/: NOTES.md  README.md  package-lock.json  package.json
apps/chip8/chip8-core/: Cargo.toml  README.md
apps/chip8/chip8-core/src/: cpu.rs  display.rs  lib.rs
apps/gpu-demos/: Cargo.toml
apps/gpu-demos/src/: main.rs
apps/pinecube-capture-norm/: README.md  requirements.txt
apps/svm-convex/: requirements.txt
blog/: Gemfile  _config.yml  about.md
blog/_drafts/: 2020-03-13-fenix-glam.md  adder-python-docker.markdown  cloud-next-2018.md  high-dimensional-time-series.md  pyspark-package.md  remote-sensing.md  schema-data-integration  schema-data-integration.md  semantic-versioning.md
blog/_posts/: 2018-05-14-welcome-to-jekyll.markdown  2018-05-18-adder-python-docker.markdown  2018-05-18-welcome-to-jekyll.markdown  2018-06-02-remote-sensing.md  2018-08-03-cloud-next-2018.md  2020-02-17-graphframes.md  2020-02-21-jni-python.md  2020-03-01-z80-asm.md  2020-03-16-mozaggregator2bq-logs.md  2021-01-20-clustering-existing-bigquery-tables.md  2021-01-20-replacing-clustered-tables-bigquery.md  (+4 more)
blog/scripts/: Pipfile  (+1 more)
home/: README.md  index.html  keybase.txt  life.html  package-lock.json  package.json  rollup.config.js  rollup.glob.js
public/: biwascheme.js  index.html  keybase.txt  life.html  mandelbrot.js
scripts/: sync.py  sync_midi.py
secret/: .gitignore  Pipfile  README.md  deploy.sh  secret.ini  secret.py  secret.service  wsgi.py
(+157 files in other folders)
